ID-909 Fix the System not fit the added new category properly on the home page of the comic template

--- a/initData/progressiveTemplates/templates/Comic/src/app/page-body/homepage/homepage.component.css
+++ b/initData/progressiveTemplates/templates/Comic/src/app/page-body/homepage/homepage.component.css
@@ -5,7 +5,7 @@
 }
 .flex-row .flex-col{
   width: calc(100vw / 2);
-  margin: 5px 20px;
+  padding: 5px 20px;
 }
 .flex-row .flex-col img{
   width: 100%;
